creando un tema base para trabajar

--- a/wp-content/themes/tema/style.css
+++ b/wp-content/themes/tema/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bravana
+Theme Name: Bravana sin gulp
 Template Theme URI:  
 Author: Enrique Valerio 
 Description: Desarrollada especialmente para apredizaje sobre WordPress. 
